--- a/200301-EDA&model-yuqi_melanie_edits.Rmd
+++ b/200301-EDA&model-yuqi_melanie_edits.Rmd
@@ -33,7 +33,7 @@ set.seed(2019)
 
 ## Read in Data and Manipulation
 
-```{r data, include = FALSE}
+```{r data}
 cancer = read_csv("breast-cancer.csv") %>% 
   mutate(diagnosis = as.numeric(factor(diagnosis, levels = c("B","M"), labels = c(0,1)))-1) %>% 
   mutate(radius_mean = scale(radius_mean))
@@ -43,57 +43,68 @@ cancer_package = cancer %>% select(contains("mean"), diagnosis)
 cancer_scale = cbind(rep(1,569), predictor_scale, cancer$diagnosis)
 names(cancer_scale) = c("ones", names(cancer)[3:12], "response")
 
-## standardize data!!
 ```
+
+logistic regression:
 
 $$\log(\frac{\pi_i}{1-\pi_i}) = \mathbf x_i \boldsymbol \beta$$
 
-```{r,include=FALSE}
+Find likelihood, gradient, and Hessian matrix for logistic model:
+
+```{r stuff}
+#function for likelihood, gradient, and hessian
+
 hessian_gradient_log = function(data, beta_vec){
-  y = as.matrix(data%>% select(last_col()))
-  x = as.matrix(data[,1:dim(data)[2]-1])
-  theta = x%*%beta_vec
-  pi = exp(theta)/(1+exp(theta))
-  loglikelihood = sum(y*theta-log(1+exp(theta)))
-  gradient = t(x)%*%(y-pi)
-  pi_matrix = matrix(0, nrow = dim(data)[1],ncol = dim(data)[1])
+  y = as.matrix(data %>% select(last_col()))
+  x = as.matrix(data[, 1:dim(data)[2]-1])
+  
+  theta = x %*% beta_vec
+  pi = exp(theta)/(1 + exp(theta))
+  
+  loglikelihood = sum(y*theta - log(1 + exp(theta)))
+  gradient = t(x)%*%(y - pi)
+  pi_matrix = matrix(0, nrow = dim(data)[1], ncol = dim(data)[1])
   diag(pi_matrix) = pi*(1-pi)
   hessian = -t(x)%*%pi_matrix%*%(x)
   return(list(loglikelihood = loglikelihood, gradient = gradient, hessian = hessian))
-  
 }
 
-a = hessian_gradient_log(cancer_scale, rep(0.02,11))
-
+a = hessian_gradient_log(cancer_scale, rep(0.02,11)) #Example of function
 ```
 
-```{r,include=FALSE}
-NR = function(data, beta_start,tol = 1e-10, max = 200){
+Function for Newton-Raphson algorithm:
+
+```{r NR}
+NR = function(data, beta_start, tol = 1e-10, max = 200){
   i = 0
   cur = beta_start
   stuff = hessian_gradient_log(data, cur)
   curlog = stuff$loglikelihood
-  res = c(i = 0,curlog = curlog,cur = cur,step = step)
+  res = c(i = 0, curlog = curlog, cur = cur, step = 1)
   prevlog = -Inf
-  while((i<=max)&(abs(curlog-prevlog)>tol)){
+  while((i < max) && (abs(curlog - prevlog) > tol)){
     step = 1
-    i = i+1
+    i = i + 1
     prevlog = stuff$loglikelihood
+    
+    #ensure that the direction of the step is an ascent direction
     eigen = eigen(stuff$hessian)
-    if(sum(eigen$values)==0){
+    if(max(eigen$values) < 0){ #Check if negative definite
       hessian = stuff$hessian
     }
-    else{
+    else{ #Create similar negative definite matrix
       hessian = stuff$hessian - max(eigen$values)
     }
+    
     prev = cur
     cur = prev - rep(step,length(prev))*(solve(hessian)%*%stuff$gradient)
     stuff = hessian_gradient_log(data,cur)
     curlog = stuff$loglikelihood
+    
     while(curlog<prevlog){
       step = step/2
-      cur = prev - rep(step,length(prev))*(solve(hessian)%*%stuff$gradient)
-      stuff = hessian_gradient_log(data,cur)
+      cur = prev - rep(step, length(prev))*(solve(hessian)%*%stuff$gradient)
+      stuff = hessian_gradient_log(data, cur)
       curlog = stuff$loglikelihood
     }
     names(cur) = names(data)[-12]
@@ -101,56 +112,56 @@ NR = function(data, beta_start,tol = 1e-10, max = 200){
   }
   return(res)
 }
+
 beta_start = rep(0.02,11)
 names(beta_start) = names(cancer_scale)[-12]
-
+#run NR algorithm 
 NR_result = NR(cancer_scale, beta_start)
+#extract final coefficients from NR
+NR_coeff =  NR_result[dim(NR_result)[1], c(-1, -2, -14)]
 
-NR_coeff =  NR_result[dim(NR_result)[1], -1:-2]
+
+#compare results to glm package logistic regression:
+cancer_fit = glm(response ~ ., data = cancer_scale[, -1], family = binomial(link = "logit"))
+
+round(as.vector(cancer_fit$coefficients), 3) == round(as.vector(NR_coeff), 3)
+
+# same results as NR
 ```
 
-# validation using glm
-```{r,,include=FALSE}
-cancer_fit = glm(response~., data = cancer_scale,family = binomial(link = "logit"))
-summary(cancer_fit)
+Function to find AUC:
 
-# same results with NR
-```
-
-## questions or modify:
-
-1. normalize or standardize?
-2. how to standardize easily?
-
-```{r,,include=FALSE}
-auc = function(yi,pi_hat){
-  auc = c()
+```{r auc}
+auc = function(yi, pi_hat){
+  auc = NULL
   for (i in seq(dim(pi_hat)[2])){
-    c = tibble(pi_hat = pi_hat[,i],yi = yi)
-    m = sum(yi==1)
-    n = length(yi)-m
-    c = 
-      c %>% 
+    c = tibble(pi_hat = pi_hat[ , i], yi = yi)
+    m = sum(yi == 1)
+    n = length(yi) - m
+    c = c %>% 
       arrange(pi_hat) %>% 
       mutate(order = seq_along(pi_hat)) %>% 
       group_by(pi_hat) %>% 
       mutate(mean_order = mean(order))
     pos_order = c %>% filter(yi == 1) %>% pull(mean_order)
-    auc = c(auc,(sum(pos_order)-m*(m+1)/2)/(m*n))
+    
+    auc = c(auc, (sum(pos_order) - m*(m+1)/2)/(m*n))
   }
-  
-  
   return(auc)
 }
-yi = c(0,1,0,1,0,0,0,1)
-pi = matrix(rep(rep(c(0.2,0.000001,0.3,0.4),2),2),ncol = 2 )
-auc(yi,pi)
+
+#Example
+yi = c(0, 1, 0, 1, 0, 0, 0, 1)
+pi = matrix(rep(rep(c(0.2,0.000001,0.3,0.4),2), 2), ncol = 2 )
+auc(yi, pi)
 ```
 
-##
-```{r,include=FALSE}
+Build a logistic LASSO model with k-fold cross validation:
+
+```{r lasso}
 set.seed(2019)
 #lambda_max = max(abs(NR_coeff)) ## warm start
+
 tuning_grid = seq(3, 0,length = 100) ## tuning seq
 ## function of lasso coordinate descent algorithm
 # input:
@@ -173,70 +184,73 @@ tuning_grid = seq(3, 0,length = 100) ## tuning seq
 # best_tune -- best tuning parameter lambda
 # SSE_te -- test SSE results among cv
 
-lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200){
+lasso_co_des = function(data, beta_vec,  k = 5, tune_grid, tol = 1e-10, max = 200){
   ## create fold
-  folds = createFolds(data$response,k = k, returnTrain = T)
-  cv_result = c(k = 0,best_lambda = 0, beta_vec = beta_vec, g.stat_tr = Inf,auc_te = 0,  g.stat_te = Inf,SSE_test = Inf)
+  folds = createFolds(data$response, k = k, returnTrain = T)
+  cv_result = c(k = NULL,
+                best_lambda = NULL, 
+                beta_vec = beta_vec, 
+                g.stat_tr = Inf,
+                auc_te = 0,  
+                g.stat_te = Inf,
+                SSE_test = Inf)
+  
   ## lasso coord des for train data
   for (i in 1:k) {
     tr_rows = folds[[i]]
-    train = data[tr_rows,]
-    test = data[-tr_rows,]
+    train = data[tr_rows, ]
+    test = data[-tr_rows, ]
     n_tr = dim(train)[1]
-    x_tr = as.matrix(train[,1:dim(train)[2]-1]) # dim = (0.8*569, 11)
-    y_tr = as.matrix(train[,dim(train)[2]]) # dim = (0.8*569, 1)
-    x_te = as.matrix(test[,1:dim(test)[2]-1]) # dim = (0.2*569, 11)
-    y_te = as.matrix(test[,dim(test)[2]]) # dim = (0.2*569, 1)
-    res = c()
-    ## for every lambda
+    x_tr = as.matrix(train[ , 1:dim(train)[2] - 1]) 
+    y_tr = as.matrix(train[ , dim(train)[2]]) 
+    x_te = as.matrix(test[ , 1:dim(test)[2] - 1]) 
+    y_te = as.matrix(test[ , dim(test)[2]]) 
+    res = NULL
+    
+    theta_vec = x_tr %*% beta_vec #theta for every obs
+    pi_vec = exp(theta_vec)/(1 + exp(theta_vec)) #  pi for every obs
+    w_vec = pi_vec*(1 - pi_vec) + rep(1e-10, length(pi_vec)) # weight for every obs 
+    z_vec = theta_vec + (y_tr - pi_vec)/w_vec # working response for every obs 
+    w_res_vec = sqrt(w_vec)*(z_vec - theta_vec)
+    
+    
+    ## find performance measure for every lambda
     for (lambda in sort(tune_grid, decreasing = T)) {
-      theta_vec = x_tr%*%beta_vec # dim = (455,1), theta for every obs
-      pi_vec = exp(theta_vec)/(1+exp(theta_vec)) # dim = (455,1), pi for every obs
-      w_vec = pi_vec*(1-pi_vec)+rep(1e-10,length(pi_vec)) # dim = (455,1), weight for every obs 
-      z_vec = theta_vec + (y_tr - pi_vec)/w_vec # dim = (455,1), working response for every obs 
-      w_res_vec = sqrt(w_vec)*(z_vec - theta_vec)
-      #w_res_vec = w_res_vec[!is.nan(w_res_vec)]
       cur_target = (1/2*(n_tr))*t((w_res_vec))%*%(w_res_vec) + lambda*sum(abs(beta_vec[-1]))
       pre_target = -Inf
       time = 0
       names(beta_vec) = paste("beta_",0:10, sep = "")
       res = rbind(res,c(k = k,lambda = lambda,time = time, cur_target = cur_target, beta_vec))
-      while((abs(pre_target-cur_target)>tol) & time < max){
-        time = time+1
-        zero_index = seq(1,length(beta_start))
+      while((abs(pre_target - cur_target) > tol) && time < max){
+        time = time + 1
+        zero_index = seq(1, length(beta_start))
         pre_target = cur_target
         beta_pre = beta_vec
-         for (j in 1:dim(train)[2]-1) {
-           x_tr_s = x_tr[,zero_index]
-           beta_pre_s = beta_pre[zero_index] ## sparse updating
-           w_z_vec_j = as.vector(sqrt(w_vec)*(z_vec - x_tr_s%*%beta_pre_s + as.vector(x_tr[,j]*beta_pre[j])))
-           #w_z_vec_j = w_z_vec_j[!is.nan(w_z_vec_j)]
-           # dim(455,1),working response with out jth predictor
-           w_x_tr_j = as.vector(as.vector(sqrt(w_vec)) * x_tr[,j])
-           #w_x_tr_j = w_x_tr_j[!is.nan(w_x_tr_j)]
-           ## dim(455,1), weighted obs on jth row
-           tmp = as.numeric(t(w_x_tr_j) %*% w_z_vec_j)
-           lambda_n = lambda*dim(x_tr)[1] 
-           if(j == 1){
-             beta_pre[j] = tmp/sum(w_vec)
-           }
+        for (j in 1:dim(train)[2] - 1) {
+          x_tr_s = x_tr[, zero_index]
+          beta_pre_s = beta_pre[zero_index] ## sparse updating
+          w_z_vec_j = as.vector(sqrt(w_vec)*(z_vec - x_tr_s%*%beta_pre_s + as.vector(x_tr[,j]*beta_pre[j])))
+          w_x_tr_j = as.vector(as.vector(sqrt(w_vec)) * x_tr[,j])
+          tmp = as.numeric(t(w_x_tr_j) %*% w_z_vec_j)
+          lambda_n = lambda*dim(x_tr)[1] 
+          if(j == 1){
+            beta_pre[j] = tmp/sum(w_vec)
+            }
              
-           if (j>=2) {
-             if (abs(tmp)>lambda_n) {
-              if(tmp > 0) {tmp = tmp - lambda_n}
-              else {tmp = tmp + lambda_n}
-              }else{
-              tmp = 0
-              zero_index = zero_index[zero_index!=j]}
-           }
-           beta_pre[j] = tmp/(t(w_x_tr_j) %*% w_x_tr_j)
-           }
+           if (j >= 2) {
+             if (abs(tmp) > lambda_n) {
+               if(tmp > 0) {tmp = tmp - lambda_n} else {tmp = tmp + lambda_n}
+             }else{tmp = 0
+               zero_index = zero_index[zero_index!=j]}
+             }
+          beta_pre[j] = tmp/(t(w_x_tr_j) %*% w_x_tr_j)
+        }
+        
         beta_vec = beta_pre
-        theta_vec = x_tr%*%beta_vec # dim = (455,1), theta for every obs
-        pi_vec = exp(theta_vec)/(1+exp(theta_vec)) # dim = (455,1), pi for every obs
-        w_vec = pi_vec*(1-pi_vec)+rep(1e-10,length(pi_vec)) # dim = (455,1), weight for every obs 
-        z_vec = theta_vec + (y_tr - pi_vec)/w_vec 
-        # dim = (455,1), working response for every obs 
+        theta_vec = x_tr%*%beta_vec # theta for every obs
+        pi_vec = exp(theta_vec)/(1+exp(theta_vec)) # pi for every obs
+        w_vec = pi_vec*(1-pi_vec)+rep(1e-10,length(pi_vec)) # weight for every obs 
+        z_vec = theta_vec + (y_tr - pi_vec)/w_vec  # working response for every obs 
         w_res_vec = sqrt(w_vec)*(z_vec - theta_vec)
         w_res_vec = w_res_vec[!is.nan(w_res_vec)]
         cur_target = (1/(2*n_tr))*t((w_res_vec))%*%(w_res_vec) +lambda*sum(abs(beta_vec[-1]))
@@ -251,7 +265,7 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
     dplyr::select(contains("beta"))
   beta_lambda_m = as.matrix(beta_lambda[2:dim(beta_lambda)[2]]) # dim = (194, 11)
   ## use train dataset to choose lambda
-  pi_hat = exp(x_tr %*% t(beta_lambda_m))/(1+exp(x_tr %*% t(beta_lambda_m)))
+  pi_hat = exp(x_tr %*% t(beta_lambda_m))/(1 + exp(x_tr %*% t(beta_lambda_m)))
   residual_lambda = rep(y_tr,dim(beta_lambda_m)[1]) - pi_hat
   SSE_tr = as.vector(rowSums(t(residual_lambda^2)))
   ## auc calculation
@@ -260,10 +274,11 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
   g.stat_tr = as.vector(rowSums(t(g.res^2)))
   result_tr = as.tibble(cbind(beta_lambda,g.stat_tr = g.stat_tr,auc_tr = auc_tr,SSE_tr = SSE_tr))
   best_result =  result_tr %>% 
-    filter(auc_tr == max(auc_tr)) %>% filter(lambda == min(lambda))  
-  best_result = best_result[1,]
+    filter(auc_tr == max(auc_tr)) %>% 
+    filter(lambda == min(lambda))  
+  best_result = best_result[1, ]
   # use test datasets to evaluate
-  best_result_m = as.matrix(best_result[2:(dim(best_result)[2]-3)])
+  best_result_m = as.matrix(best_result[2:(dim(best_result)[2] - 3)])
   pi_hat_te = exp(x_te %*% t(best_result_m))/(1+exp(x_te %*% t(best_result_m)))
   residual_test = y_te - pi_hat_te
   SSE_test = as.vector(rowSums(t(residual_test^2)))
@@ -271,13 +286,25 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
   g.res_te = (y_te - pi_hat_te)/sqrt(pi_hat_te*(1-pi_hat_te))
   g.stat_te = as.vector(rowSums(t(g.res_te^2)))
   
-  cv_result = rbind(cv_result, c(k = i,best_lambda = best_result$lambda, beta_vec = best_result[2:(dim(best_result)[2]-3)],g.stat_tr = best_result$g.stat_tr, auc_te = auc_te,g.stat_te = g.stat_te,SSE_test = SSE_test))
+  cv_result = rbind(cv_result, 
+                    c(k = i,
+                      best_lambda = best_result$lambda, 
+                      beta_vec = best_result[2:(dim(best_result)[2]-3)],
+                      g.stat_tr = best_result$g.stat_tr, 
+                      auc_te = auc_te,
+                      g.stat_te = g.stat_te,
+                      SSE_test = SSE_test))
   #cv_result = as.tibble(cv_result)  
   }
   
-  return(list(cv_result = unnest(as.tibble(cv_result)),res = res, result_tr= result_tr , best_result = best_result))
+  return(list(cv_result = unnest(as.tibble(cv_result)),
+              res = res, 
+              result_tr = result_tr , 
+              best_result = best_result))
 }
-x = lasso_co_des(data = cancer_scale, beta_vec = rep(0.02,11), k = 5,tune_grid = tuning_grid,max = 200)
+
+set.seed(2020)
+x = lasso_co_des(data = cancer_scale, beta_vec = rep(0.02,11), k = 5, tune_grid = tuning_grid, max = 200)
 
 knitr::kable(x$cv_result,digits = 3)
 
@@ -299,31 +326,31 @@ g3 = x$result_tr %>%
 g1+g2+g3
 ```
 
+Show parameters and perfomance measures found per CV fold:
 
-```{r}
+```{r results}
 # cleaning the above x
 library(sjmisc)
-y=as.data.frame(x$cv_result)
-y_y=rotate_df(y)
-names(y_y)=c("Enter","Fold1","Fold2","Fold3","Fold4","Fold5")
+y = as.data.frame(x$cv_result)
+y_y = rotate_df(y)
+names(y_y) = c("Enter","Fold1","Fold2","Fold3","Fold4","Fold5")
 knitr::kable(y_y)
 ```
 
+Compare results to glmnet package
 
-
-## instead of using MSE, using pearson chi-square 
-
-validation
-
-```{r}
-x.mat <- model.matrix(diagnosis~., cancer_package[-1])[,-1]
+```{r lasso_check}
+x.mat <- model.matrix(diagnosis~., cancer_package)[,-1]
 y.class <- cancer_package$diagnosis
 
+set.seed(2020)
 ctrl1 <- trainControl(method = "cv", number = 5)
-lasso.fit <- train(x.mat, y.class,
-                  method = "glmnet",
-                  tuneGrid = expand.grid(alpha = 1,
-                                         lambda = seq(3, -1,length = 100)), 
+set.seed(2020)
+lasso.fit <- train(x.mat, 
+                   as.factor(y.class),
+                   method = "glmnet",
+                   tuneGrid = expand.grid(alpha = 1,
+                                          lambda = seq(3, -1,length = 1000)), 
                   # preProc = c("center", "scale"),
                   trControl = ctrl1)
 
@@ -336,15 +363,3 @@ plot(lasso.fit)
 # names(co2)=co@Dimnames[[1]]
 # co2 %>% as.data.frame() %>% knitr::kable()
 ```
-
-
-
-
-
-
-
-
-
-
-
-
